# mass_dash

./: .gitignore  MassProps - Copy.xlsm  MassProps Old.xlsm  MassProps Parametric Equations.xlsm  MassProps w SWAP.xlsm  MassProps.xlsm  MassProps_.xlsb.xlsm  README.md  pyproject.toml  requirements.txt  streamlit_app.py
MassExports/: mass_props_v0.1.10_Draft_2026-05-17.csv  mass_props_v0.1.11_Draft_2026-05-17.csv  mass_props_v0.1.12_Draft_2026-05-17.csv  mass_props_v0.1.14_Draft_2026-05-17.csv  mass_props_v0.1.22_Draft_2026-05-18.csv  mass_props_v0.1.23_Draft_2026-05-18.csv  mass_props_v0.1.24_Draft_2026-05-18.csv  mass_props_v0.1.3_Draft_2026-05-16.csv  mass_props_v0.1.5_Draft_2026-05-16.csv  mass_props_v0.1.6_Draft_2026-05-16.csv  mass_props_v0.1.8_Draft_2026-05-17.csv
MassImports/: mdo_weight_breakdown_2026-05-17_3fc9d0d.csv
