[project]
name = "astrom-mass"
version = "0.1.0"
description = "Streamlit tools for plotting AstroM mass export weight breakdowns."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "plotly>=5.22",
    "streamlit>=1.34",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 100
target-version = "py310"
